--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-config-airbnb": "^12.0.0"
   },
   "dependencies": {
-    "phaser": "^2.6.2"
+    "p2": "^0.7.1",
+    "phaser": "^2.6.2",
+    "pixi": "^0.3.1"
   }
 }
